# typehints_python_playground

./: '  .gitignore  2  COLLECTIONS.md  GE.md  IDEIAS_VIDEOS.md  LISKOV.md  LOGGING.txt  NEOVIM.md  NEOVIM_COMMANDS.md  NEOVIM_TEMP.md  README.md  REFERENCE.md  TEMP.md  TYPEGUARD.md  YOUTUBE.md  YOUTUBE.txt  ]:w  abc_special_methods.py  exemplo01.py  exemplo02.py  exemplo03.py  exemplo04.py  exemplo041.py  exemplo05.py  exemplo05.pyOLD  exemplo06.py  exemplo07.py  exemplo08.py  exemplo08.pyOLD  exemplo09.py  exemplo10.py  exemplo11.py  exemplo12.py  exemplo13.py  exemplo14.py  exemplo15.py  exemplo17.py  exemplo18.py  exemplo19.py  (+43 more)
